Margin fix + strip more whitespace

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -22,7 +22,8 @@ a {
 i {
     color: #F5F5F5;
     font-size: 2rem;
-    margin-left: 8px;
+    margin-left: 4px;
+    margin-right: 4px;
 }
 
 body {
